# ssh-connect

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
debian/: changelog  control  copyright  rules  ssh-connect.install
packaging/: README.md
packaging/homebrew/: ssh-connect.rb
scripts/: build-deb.sh  install-brew.sh  install-deb.sh
ssh_connect/: __init__.py  __main__.py  cli.py  store.py
