[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-connect"
version = "0.1.0"
description = "Named SSH connection manager"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
ssh-connect = "ssh_connect.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssh_connect*"]
